--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,6 +11,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     delete: true
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    sortable_fields: ["title", "pubDate", "author"]
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Slug", name: "slug", widget: "string" }
