--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,6 +12,8 @@ collections:
     delete: true
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     sortable_fields: ["title", "pubDate", "author"]
+    extension: mdx
+    format: frontmatter
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Slug", name: "slug", widget: "string" }
@@ -19,3 +21,4 @@ collections:
       - { label: "Publish Date", name: "pubDate", widget: "datetime" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Layout", name: "layout", widget: "hidden", default: `../../layouts/BlogPost.astro`}
