fix: yml formatting

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -21,4 +21,9 @@ collections:
       - { label: "Publish Date", name: "pubDate", widget: "datetime" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Layout", name: "layout", widget: "hidden", default: `../../layouts/BlogPost.astro`}
+      - {
+          label: "Layout",
+          name: "layout",
+          widget: "hidden",
+          default: "../../layouts/BlogPost.astro",
+        }
