--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     delete: true
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    sortable_fields: ["title", "pubDate", "author"]
+    sortable_fields: ["title", "pubDate", "updatedDate", "author"]
     extension: mdx
     format: frontmatter
     fields: # The fields for each document, usually in front matter
