--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@astrojs/image": "^0.12.1",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/react": "^1.2.2",
-    "@astrojs/rss": "^2.0.0",
+    "@astrojs/rss": "^2.1.0",
     "@astrojs/sitemap": "^1.0.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "astro": "^2.0.1",
     "astro-icon": "^0.8.0",
-    "framer-motion": "^8.4.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "framer-motion": "^8.5.3",
+    "markdown-it": "^13.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanitize-html": "^2.8.1",
     "sharp": "^0.31.3"
   }
 }
