--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: "/images/uploads"
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
     label: "Blog Posts" # Used in the UI
-    folder: "src/pages/blog" # The path to the folder where the documents are stored
+    folder: "src/content/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     delete: true
     slug: "{{fields.slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
