--- a/package.json
+++ b/package.json
@@ -17,15 +17,25 @@
     "@astrojs/react": "^2.0.1",
     "@astrojs/rss": "^2.1.0",
     "@astrojs/sitemap": "^1.0.0",
+    "@swup/scroll-plugin": "^2.0.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "astro": "^2.0.2",
     "astro-icon": "^0.8.0",
+    "flamethrower-router": "0.0.0-meme.12",
     "framer-motion": "^8.5.4",
     "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanitize-html": "^2.8.1",
     "sharp": "^0.31.3"
+  },
+  "devDependencies": {
+    "@swup/a11y-plugin": "^3.0.0",
+    "@swup/head-plugin": "^1.3.0",
+    "@swup/preload-plugin": "^2.1.1",
+    "@swup/progress-plugin": "^2.0.0",
+    "@swup/slide-theme": "^1.0.5",
+    "swup": "^3.0.7"
   }
 }
