--- a/package.json
+++ b/package.json
@@ -12,29 +12,34 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.13.0",
-    "@astrojs/mdx": "^0.15.1",
-    "@astrojs/react": "^2.0.1",
-    "@astrojs/rss": "^2.1.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "astro": "^2.0.2",
-    "astro-icon": "^0.8.0",
-    "framer-motion": "^8.5.4",
+    "@astrojs/image": "^0.13.1",
+    "@astrojs/mdx": "^0.15.2",
+    "@astrojs/react": "^2.2.1",
+    "@astrojs/rss": "^2.4.3",
+    "@astrojs/sitemap": "^1.3.3",
+    "@types/marked": "^5.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "astro": "^2.7.2",
+    "astro-icon": "^0.8.1",
+    "classnames": "^2.3.2",
+    "framer-motion": "^8.5.5",
+    "highlight.js": "^11.8.0",
     "markdown-it": "^13.0.1",
+    "marked": "^5.1.0",
+    "marked-highlight": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanitize-html": "^2.8.1",
+    "sanitize-html": "^2.11.0",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@swup/a11y-plugin": "^3.0.0",
     "@swup/head-plugin": "^1.3.0",
-    "@swup/preload-plugin": "^2.1.1",
+    "@swup/preload-plugin": "^2.3.0",
     "@swup/progress-plugin": "^2.0.0",
-    "@swup/scroll-plugin": "^2.0.2",
+    "@swup/scroll-plugin": "^2.0.3",
     "@swup/slide-theme": "^1.0.5",
-    "swup": "^3.0.7"
+    "swup": "^3.1.1"
   }
 }
