--- a/package.json
+++ b/package.json
@@ -12,25 +12,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.13.1",
-    "@astrojs/mdx": "^0.15.2",
-    "@astrojs/react": "^2.2.1",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^1.3.3",
-    "@types/marked": "^5.0.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "astro": "^2.7.2",
-    "astro-icon": "^0.8.1",
-    "classnames": "^2.3.2",
-    "framer-motion": "^8.5.5",
-    "highlight.js": "^11.8.0",
-    "marked": "^5.1.0",
-    "marked-highlight": "^2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanitize-html": "^2.11.0",
-    "sharp": "^0.31.3"
+    "@astrojs/mdx": "^3.0.0",
+    "@astrojs/react": "^3.3.4",
+    "@astrojs/rss": "^4.0.6",
+    "@astrojs/sitemap": "^3.1.4",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.8.6",
+    "astro-icon": "^1.1.0",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.2.4",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.0",
+    "marked-highlight": "^2.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanitize-html": "^2.13.0",
+    "sharp": "^0.33.4",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@swup/a11y-plugin": "^3.0.0",
